# lstm_speech_recognition

./: .gitignore  .gitignore.swp  readme.md
dsp_source/: CMakeCache.txt  CMakeLists.txt  HLS_FFT  Makefile  cmake_install.cmake  dsp_source.cpp  fft_wiki.cpp  generate_all_mels.py  generate_log_mel_filterbank_energies  generate_mels.py  hamming_original.cpp  tags
dsp_source/fft_single/: README  fft_tb.cpp  fft_top.cpp  fft_top.h  run_hls.tcl
dsp_source/fft_single/proj/: .cproject  .project  .vivado_hls_log_all.xml
dsp_source/fft_single/proj/.apc/: autopilot.apfmapping
dsp_source/fft_single/proj/solution1/: csim.tcl  script.tcl  sdx.tcl  solution1.aps  solution1_data.json
dsp_source/fft_single/proj/solution1/.autopilot/: .automg_exit  .autopilot_exit
dsp_source/fft_single/proj/solution1/.autopilot/db/: .message_syn.xml  __ctype_info__.xml  a.g  a.g.0  a.g.0.bc  a.g.2.bc  a.g.2.prechk.bc  a.o.1.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  a.pp.0.bc  a.pp.bc  autopilot.rtl.models.txt  bugpoint.sh  dummy_proc_be.adb  dummy_proc_be.adb.xml  dummy_proc_be.bind.adb  dummy_proc_be.compgen.tcl  dummy_proc_be.sched.adb  dummy_proc_be.sched.adb.xml  dummy_proc_be.tbgen.tcl  dummy_proc_be.verbose.bind.rpt  dummy_proc_be.verbose.bind.rpt.xml  dummy_proc_be.verbose.rpt  dummy_proc_be.verbose.rpt.xml  dummy_proc_be.verbose.sched.rpt  dummy_proc_be.verbose.sched.rpt.xml  dummy_proc_fe.adb  dummy_proc_fe.adb.xml  dummy_proc_fe.bind.adb  dummy_proc_fe.compgen.tcl  dummy_proc_fe.sched.adb  dummy_proc_fe.sched.adb.xml  dummy_proc_fe.tbgen.tcl  dummy_proc_fe.verbose.bind.rpt  (+41 more)
(+387 files in other folders)
